--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <!-- Colors referenced by themes.xml -->
+    <color name="primary_accent">#FF00ACC1</color>  <!-- Muted Teal / Tech Blue -->
+    <color name="on_primary_dark">#FF000000</color>   <!-- Text/icons on primary_accent -->
+    <color name="dark_background">#FF121212</color> <!-- Almost Black -->
+
+    <!-- Transparent color, often useful -->
+    <color name="transparent">#00000000</color>
+
+    <!-- You can add more here if your splash screen or other XML parts need them,
+         but for Compose UI, define colors in ui/theme/Color.kt -->
 </resources>
